--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -55,6 +55,7 @@ p{
     }
     p{
         font-size: 24px;
+        display: block;
        margin: 0 15px;
        max-width: 100%;
     }
@@ -89,8 +90,6 @@ p{
     .container{
        padding: 95px 0 85px 0;
     }
-    .container{
-        background-image: url(../../assets/background.png);
-    }
+   
   
 }
