--- a/src/components/textCard/textCard.css
+++ b/src/components/textCard/textCard.css
@@ -1,17 +1,21 @@
 .cards{
-    width: 100%;
+    overflow-y: hidden;
     color: black;
+    padding-top: 30px;
+    margin: 25px auto;
+    width: 90%;
+    mask-image:linear-gradient(to right, transparent, white 10px, white 90%, transparent); ;
 }
 .cards-scroll{
-    overflow-y: hidden;
-    width: auto;
     display: flex;
     justify-content: space-between;
 }
 .card{
-    max-width: 42em;
-    min-width: 75vw;
-    margin: 40px 0 40px 20px;
+    min-width: 75%;
+    margin-left: 40px;
+}
+.cards-scroll div:first-child{
+    margin-left:5px;
 }
 .card h3{
     font-size:20px;
@@ -20,10 +24,44 @@
 }
 
 .card p{
-    display: inline;
+    margin: 0;
+    padding: 0;
+    max-width: 42em;
+    display: block;
     text-align: left;
     color: black;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.7;
+}
+.card p:not(:nth-child(2)) {
+    margin-top: 25px;
+}
+@media(min-width:780px){
+    .cards{
+        mask-image:none;
+        margin: 60px auto ;
+    }
+    .cards-scroll{
+        overflow-y:initial;       
+    }
+    .card{
+        min-width: auto;
+    }
+}
+@media(min-width:980px){
+    .card p{
+        font-size: 17px;
+    }
+ }
+@media(min-width:1280px){
+   .card h3{
+       font-size:24px;
+   }
+}
+@media(min-width:1340px){
+    .cards,
+    .cards-scroll{
+        width: 1280px;
+    }
 }
