--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -54,6 +54,7 @@ p{
         font-size: 45px;
     }
     p{
+        color: #FFF;
         font-size: 24px;
         display: block;
        margin: 0 15px;
